fix: alignment of plus icon in the add snippet button

--- a/src/styles/Extn-CustomSnippets.less
+++ b/src/styles/Extn-CustomSnippets.less
@@ -88,6 +88,11 @@
     top: 0.6px;
 }
 
+.custom-snippet-btn .fa-plus {
+    position: relative;
+    top: 0.6px;
+}
+
 .filter-snippets-panel {
     display: inline-block;
 }
